# simplecalc

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  azure-pipelines.yml  pyproject.toml  readthedocs.yml  setup.cfg
ci/: install.yml  tests.yml
doc/: api.rst  changelog.rst  conf.py  index.rst
simple_calculator/: __init__.py  calculator.py  cli.py
simple_calculator/tests/: test_calculator.py  test_cli.py
simplecalc/: __init__.py  calculator.py  cli.py
simplecalc/tests/: test_calculator.py  test_cli.py
