[tool.poetry]
name = "simplecalc"
version = "0.1.0"
description = "A simple calculator to demonstrate python tooling"
authors = ["Adithya Balaji <adithyabsk@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://simplecalc.readthedocs.io"
repository = "https://github.com/adithyabsk/simplecalc"
documentation = "https://simplecalc.readthedocs.io"
include = [
    "README.rst",
    "pyproject.toml",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
toml = "^0.10.0"

sphinx = { version = "^2.1", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }



[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
xdoctest = "^0.9.1"
flake8-docstrings = "^1.3.0"
pydocstyle = "<4.0"
black = {version = "^19.3b0", allows-prereleases = true}
isort = {version = "^4.3", extras = ["pyproject"]}
seed-isort-config = "^1.9"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
coverage = "^4.5"
tox = "^3.13"
towncrier = "^19.2"
pre-commit = "^1.17"
sphinx = "^2.1"
sphinx_rtd_theme = "^0.4.3"
toml = "^0.10.0"
darglint = "^0.5.7"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.scripts]
simplecalc = "simplecalc.cli:simplecalc"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'simplecalc'
known_third_party = ["click", "pytest"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest
"""

[tool.towncrier]
# Usage: (Source: https://github.com/python-trio/trio/blob/master/pyproject.toml)
# - PRs should drop a file like "issuenumber.feature" in newsfragments
#   (or "bugfix", "doc", "removal", "misc")
# - At release time after bumping version number, run:
#   poetry run towncrier --draft, then poetry towncrier
package = "simplecalc"
filename = "doc/changelog.rst"
directory = "newsfragments"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"